--- a/index.html
+++ b/index.html
@@ -171,6 +171,10 @@
                                     <span class="flex-1">2. Đơn đăng ký danh sách cá nhân sử dụng chung thửa đất (Mẫu số 15a) </span>
                                     <i data-lucide="download" class="w-5 h-5 text-slate-500"></i>
                                 </a>
+                                <a href="https://docs.google.com/document/d/1917yHl17M8waeJDSo17ibaxBrz5y0-6V/export?format=docx" class="flex items-center w-full bg-slate-100 hover:bg-amber-100 text-slate-800 font-medium p-4 rounded-lg transition">
+                                    <i data-lucide="file-check-2" class="w-6 h-6 mr-3 text-green-600"></i>
+                                    <span class="flex-1">2. Đơn đăng ký danh sách cá nhân sử dụng chung thửa đất (Mẫu số 15b)</span>
+                                    <i data-lucide="eye" class="w-5 h-5 text-slate-500"></i>
                                 <a href="https://docs.google.com/document/d/1PuA_uTmasRtkHkgH-XuwgPJ63d_j9qzk/export?format=docx" class="flex items-center w-full bg-slate-100 hover:bg-amber-100 text-slate-800 font-medium p-4 rounded-lg transition">
                                     <i data-lucide="file-type-2" class="w-6 h-6 mr-3 text-red-600"></i>
                                     <span class="flex-1">3. Đơn đăng ký danh sách tài sản gắn liền với đất (Mẫu số 15c)</span>
@@ -190,6 +194,11 @@
                                 <a href="https://docs.google.com/document/d/1jqhm75Bm7mLqR_l1KkGM1MPiOcN1FcX3/export?format=docx" class="flex items-center w-full bg-slate-100 hover:bg-amber-100 text-slate-800 font-medium p-4 rounded-lg transition">
                                     <i data-lucide="file-check-2" class="w-6 h-6 mr-3 text-green-600"></i>
                                     <span class="flex-1">2. Đơn đăng ký danh sách cá nhân sử dụng chung thửa đất (Mẫu số 15a)</span>
+                                    <i data-lucide="eye" class="w-5 h-5 text-slate-500"></i>
+                                </a>
+                                <a href="https://docs.google.com/document/d/170XlbZA6DJlL86Ja6IWda32iIWTncglf/export?format=docx" class="flex items-center w-full bg-slate-100 hover:bg-amber-100 text-slate-800 font-medium p-4 rounded-lg transition">
+                                    <i data-lucide="file-check-2" class="w-6 h-6 mr-3 text-green-600"></i>
+                                    <span class="flex-1">2. Đơn đăng ký danh sách cá nhân sử dụng chung thửa đất (Mẫu số 15b)</span>
                                     <i data-lucide="eye" class="w-5 h-5 text-slate-500"></i>
                                 </a>
                                  <a href="https://docs.google.com/document/d/1GTrU8E0osXF3v151RKsWAe3Ysgi2PCJQ/export?format=docx" class="flex items-center w-full bg-slate-100 hover:bg-amber-100 text-slate-800 font-medium p-4 rounded-lg transition">
@@ -257,5 +266,6 @@
 
 </body>
 </html>
+
 
 
