--- a/index.html
+++ b/index.html
@@ -69,12 +69,20 @@
                         <i data-lucide="file-text" class="w-9 h-9"></i>
                     </div>
                     <h2 class="mt-6 text-2xl font-bold text-slate-900">1. ĐĂNG KÝ NHẬN TƯ VẤN</h2>
-                    <p class="mt-3 text-slate-600 max-w-2xl mx-auto">Ông/bà có nhu cầu nhận tư vấn, hỗ trợ miễn phí vui lòng bấm vào nút YÊU CẦU TƯ VẤN dưới đây, mô tả về nguồn gốc sử dụng đất và tải lên các giấy tờ có tên trong Mục 2: Danh mục hồ sơ cần thiết.</p>
+                    <p class="mt-3 text-slate-600 max-w-2xl mx-auto">Ông/bà có nhu cầu nhận tư vấn, hỗ trợ miễn phí vui lòng bấm vào nút dưới đây để mở biểu mẫu đăng ký và điền thông tin trực tiếp trên trang.</p>
+                    
                     <div class="mt-8">
-                        <a href="https://forms.gle/qrkNzGBvwsa9jav76" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center bg-red-700 hover:bg-red-800 text-white font-bold py-3 px-8 rounded-lg transition shadow-lg hover:shadow-xl transform hover:scale-105">
-                            <i data-lucide="external-link" class="w-5 h-5 mr-3"></i>
-                            TÔI MUỐN ĐĂNG KÝ NHẬN TƯ VẤN
-                        </a>
+                        <details class="group">
+                            <summary class="list-none inline-flex items-center justify-center bg-red-700 hover:bg-red-800 text-white font-bold py-3 px-8 rounded-lg transition shadow-lg hover:shadow-xl transform hover:scale-105 cursor-pointer">
+                                <i data-lucide="file-text" class="w-5 h-5 mr-3"></i>
+                                TÔI MUỐN ĐĂNG KÝ NHẬN TƯ VẤN
+                                <i data-lucide="chevron-down" class="w-5 h-5 ml-3 transition-transform transform group-open:rotate-180"></i>
+                            </summary>
+
+                            <div class="mt-8 text-left">
+                                <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc0eZXcIK3r5NK7Weul4U-iR6CzVWYpo_VgqkkP6BQD6tu6Tw/viewform?embedded=true" width="100%" height="1600" frameborder="0" marginheight="0" marginwidth="0">Đang tải…</iframe>
+                            </div>
+                        </details>
                     </div>
                 </div>
             </section>
@@ -146,7 +154,7 @@
                         <div>
                             <h4 class="font-bold text-lg flex items-center text-slate-800">
                                 <i data-lucide="map-pin" class="w-6 h-6 mr-3 text-red-700"></i>
-                                Địa điểm nộp hồ sơ
+                                2.2 Địa điểm nộp hồ sơ
                             </h4>
                             <p class="mt-2 pl-9 text-slate-600">Ông/bà có thể nộp hồ sơ trực tiếp tại các chi nhánh của trung tâm Phục vụ hành chính công Hà Nội, điểm phục vụ hành chính công cấp xã/phường hoặc nộp trực tuyến qua cổng Dịch vụ công quốc gia (Lưu ý: ông/bà cần mang hồ sơ giấy đến trực tiếp để cán bộ đối chiếu với hồ sơ trực tuyến nếu nộp hồ sơ qua môi trường điện tử).</p>
                         </div>
@@ -154,7 +162,7 @@
                         <div>
                             <h4 class="font-bold text-lg flex items-center text-slate-800">
                                 <i data-lucide="clock" class="w-6 h-6 mr-3 text-red-700"></i>
-                                Thời gian giải quyết
+                                2.3 Thời gian giải quyết
                             </h4>
                             <p class="mt-2 pl-9 text-slate-600">Thời gian giải quyết hồ sơ theo quy định của pháp luật, không kể thời gian nghỉ, lễ, tết và thời gian thực hiện nghĩa vụ tài chính đất đai là 17 ngày làm việc đối với trường hợp đăng ký đất đai, tài sản gắn liền với đất lần đầu và cấp Giấy chứng nhận lần đầu là không quá 03 ngày làm việc  (nếu có).</p>
                         </div>
@@ -162,7 +170,7 @@
                         <div>
                             <h4 class="font-bold text-lg flex items-center text-slate-800">
                                 <i data-lucide="check-square" class="w-6 h-6 mr-3 text-red-700"></i>
-                                Nơi nhận kết quả
+                                2.4 Nơi nhận kết quả
                             </h4>
                             <p class="mt-2 pl-9 text-slate-600">Sau khi hoàn tất nghĩa vụ tài chính đất đai, ông/bà nhận kết quả tại cùng địa điểm đã nộp hồ sơ.</p>
                         </div>
@@ -293,6 +301,7 @@
 
 </body>
 </html>
+
 
 
 
