--- a/index.html
+++ b/index.html
@@ -154,7 +154,7 @@
                                 <i data-lucide="map-pin" class="w-6 h-6 mr-3 text-red-700"></i>
                                 2.2 Địa điểm nộp hồ sơ
                             </h4>
-                            <p class="mt-2 text-slate-600">Ông/bà có thể nộp hồ sơ trực tiếp tại các chi nhánh của trung tâm Phục vụ hành chính công Hà Nội và điểm phục vụ hành chính công cấp xã/phường hoặc nộp trực tuyến qua cổng Dịch vụ công quốc gia <i>(Lưu ý: ông/bà cần mang hồ sơ giấy đến trực tiếp để cán bộ đối chiếu với hồ sơ trực tuyến nếu nộp hồ sơ qua cổng Dịch vụ công quốc gia).</i></p>
+                            <p class="mt-2 text-slate-600">Ông/bà lựa chọn nộp hồ sơ trực tiếp tại các chi nhánh của trung tâm Phục vụ hành chính công Hà Nội và điểm Phục vụ hành chính công cấp xã/phường hoặc nộp trực tuyến qua cổng Dịch vụ công quốc gia <i>(Lưu ý: ông/bà cần mang hồ sơ giấy đến trực tiếp một trong hai điểm trên để cán bộ đối chiếu với hồ sơ trực tuyến nếu nộp hồ sơ qua cổng Dịch vụ công quốc gia).</i></p>
                         </div>
         
                         <div class="bg-white p-4 rounded-lg border shadow-sm">
@@ -170,7 +170,7 @@
                                 <i data-lucide="check-square" class="w-6 h-6 mr-3 text-red-700"></i>
                                 2.4 Nơi nhận kết quả
                             </h4>
-                            <p class="mt-2 text-slate-600">Sau khi hoàn tất nghĩa vụ tài chính đất đai, ông/bà nhận kết quả tại cùng địa điểm đã nộp hồ sơ.</p>
+                            <p class="mt-2 text-slate-600">Sau khi ông/bà hoàn tất nghĩa vụ tài chính đất đai, ông/bà nhận kết quả tại cùng địa điểm đã nộp hồ sơ.</p>
                         </div>
                     </div>
                 </div>
@@ -294,6 +294,7 @@
 
 </body>
 </html>
+
 
 
 
