--- a/index.html
+++ b/index.html
@@ -63,21 +63,50 @@
         <div class="max-w-4xl mx-auto px-4 space-y-16">
 
             <!-- PHẦN 1: GỬI YÊU CẦU HỖ TRỢ -->
-            <section id="yeu-cau" class="text-center">
-                <div class="bg-white rounded-xl shadow-lg border p-8">
-                    <div class="flex justify-center items-center mx-auto bg-red-100 text-red-700 w-16 h-16 rounded-full">
-                        <i data-lucide="file-text" class="w-9 h-9"></i>
-                    </div>
-                    <h2 class="mt-6 text-2xl font-bold text-slate-900">1. ĐĂNG KÝ NHẬN TƯ VẤN</h2>
-                    <p class="mt-3 text-slate-600 max-w-2xl mx-auto">Ông/bà có nhu cầu nhận tư vấn, hỗ trợ miễn phí vui lòng bấm vào nút YÊU CẦU TƯ VẤN dưới đây, mô tả về nguồn gốc sử dụng đất và tải lên các giấy tờ có tên trong Mục 2.1: Thành phần hồ sơ.</p>
-                    <div class="mt-8">
-                        <a href="https://forms.gle/qrkNzGBvwsa9jav76" target="_blank" rel="noopener noreferrer" class="inline-flex items-center justify-center bg-red-700 hover:bg-red-800 text-white font-bold py-3 px-8 rounded-lg transition shadow-lg hover:shadow-xl transform hover:scale-105">
-                            <i data-lucide="external-link" class="w-5 h-5 mr-3"></i>
-                            TÔI MUỐN ĐĂNG KÝ NHẬN TƯ VẤN
-                        </a>
-                    </div>
-                </div>
-            </section>
+            <style>
+    .modal {
+        display: none; /* Ẩn modal theo mặc định */
+    }
+    .modal-toggle:checked + .modal {
+        display: flex; /* Hiện modal khi checkbox được chọn */
+    }
+</style>
+
+<section id="yeu-cau" class="text-center">
+    <div class="bg-white rounded-xl shadow-lg border p-8">
+        <div class="flex justify-center items-center mx-auto bg-red-100 text-red-700 w-16 h-16 rounded-full">
+            <i data-lucide="file-text" class="w-9 h-9"></i>
+        </div>
+        <h2 class="mt-6 text-2xl font-bold text-slate-900">1. ĐĂNG KÝ NHẬN TƯ VẤN</h2>
+        <p class="mt-3 text-slate-600 max-w-2xl mx-auto">Ông/bà có nhu cầu nhận tư vấn, hỗ trợ miễn phí vui lòng bấm vào nút dưới đây để mở biểu mẫu và điền thông tin trực tiếp.</p>
+        <div class="mt-8">
+            <label for="modal-toggle" class="inline-flex items-center justify-center bg-red-700 hover:bg-red-800 text-white font-bold py-3 px-8 rounded-lg transition shadow-lg hover:shadow-xl transform hover:scale-105 cursor-pointer">
+                <i data-lucide="file-pen-line" class="w-5 h-5 mr-3"></i>
+                TÔI MUỐN ĐĂNG KÝ NHẬN TƯ VẤN
+            </label>
+        </div>
+    </div>
+
+    <input type="checkbox" id="modal-toggle" class="modal-toggle hidden">
+    <div class="modal fixed inset-0 bg-black bg-opacity-60 flex items-center justify-center p-4 z-50">
+        <div class="bg-white rounded-2xl shadow-2xl w-full max-w-4xl h-[90vh] flex flex-col">
+            <div class="flex justify-between items-center p-5 border-b flex-shrink-0">
+                <h3 class="font-bold text-lg text-slate-800">Biểu mẫu đăng ký tư vấn</h3>
+                <label for="modal-toggle" class="cursor-pointer text-slate-500 hover:text-red-700">
+                    <i data-lucide="x" class="w-8 h-8"></i>
+                </label>
+            </div>
+            <div class="flex-grow p-1 overflow-y-auto">
+                 <iframe src="https://docs.google.com/forms/d/e/1FAIpQLSc0eZXcIK3r5NK7Weul4U-iR6CzVWYpo_VgqkkP6BQD6tu6Tw/viewform?embedded=true" width="100%" height="100%" frameborder="0" marginheight="0" marginwidth="0">Đang tải…</iframe>
+            </div>
+            <div class="flex justify-end p-4 border-t flex-shrink-0">
+                 <label for="modal-toggle" class="bg-slate-200 hover:bg-slate-300 text-slate-800 font-bold py-2 px-6 rounded-lg cursor-pointer">
+                    Đóng Lại
+                </label>
+            </div>
+        </div>
+    </div>
+</section>
 
             <!-- PHẦN 2: HƯỚNG DẪN THỰC HIỆN (CẬP NHẬT ICON) -->
            <section id="danh-muc">
@@ -154,7 +183,7 @@
                                 <i data-lucide="map-pin" class="w-6 h-6 mr-3 text-red-700"></i>
                                 2.2 Địa điểm nộp hồ sơ
                             </h4>
-                            <p class="mt-2 text-slate-600">Ông/bà lựa chọn nộp hồ sơ trực tiếp tại các chi nhánh của trung tâm Phục vụ hành chính công Hà Nội và điểm Phục vụ hành chính công cấp xã/phường hoặc nộp trực tuyến qua cổng Dịch vụ công quốc gia <i>(Lưu ý: ông/bà cần mang hồ sơ giấy đến trực tiếp một trong hai điểm trên để cán bộ đối chiếu với hồ sơ trực tuyến nếu nộp hồ sơ qua cổng Dịch vụ công quốc gia).</i></p>
+                            <p class="mt-2 text-slate-600">Ông/bà có thể nộp hồ sơ trực tiếp tại các chi nhánh của trung tâm Phục vụ hành chính công Hà Nội và điểm phục vụ hành chính công cấp xã/phường hoặc nộp trực tuyến qua cổng Dịch vụ công quốc gia <i>(Lưu ý: ông/bà cần mang hồ sơ giấy đến trực tiếp để cán bộ đối chiếu với hồ sơ trực tuyến nếu nộp hồ sơ qua cổng Dịch vụ công quốc gia).</i></p>
                         </div>
         
                         <div class="bg-white p-4 rounded-lg border shadow-sm">
@@ -170,7 +199,7 @@
                                 <i data-lucide="check-square" class="w-6 h-6 mr-3 text-red-700"></i>
                                 2.4 Nơi nhận kết quả
                             </h4>
-                            <p class="mt-2 text-slate-600">Sau khi ông/bà hoàn tất nghĩa vụ tài chính đất đai, ông/bà nhận kết quả tại cùng địa điểm đã nộp hồ sơ.</p>
+                            <p class="mt-2 text-slate-600">Sau khi hoàn tất nghĩa vụ tài chính đất đai, ông/bà nhận kết quả tại cùng địa điểm đã nộp hồ sơ.</p>
                         </div>
                     </div>
                 </div>
@@ -294,7 +323,6 @@
 
 </body>
 </html>
-
 
 
 
