--- a/index.html
+++ b/index.html
@@ -78,7 +78,7 @@
             <i data-lucide="file-text" class="w-9 h-9"></i>
         </div>
         <h2 class="mt-6 text-2xl font-bold text-slate-900">1. ĐĂNG KÝ NHẬN TƯ VẤN</h2>
-        <p class="mt-3 text-slate-600 max-w-2xl mx-auto">Ông/bà có nhu cầu nhận tư vấn, hỗ trợ miễn phí vui lòng bấm vào nút dưới đây để mở biểu mẫu và điền thông tin trực tiếp.</p>
+        <p class="mt-3 text-slate-600 max-w-2xl mx-auto">Ông/bà có nhu cầu nhận tư vấn, hỗ trợ miễn phí vui lòng bấm vào nút dưới đây để mở biểu mẫu và điền đầy đủ thông tin được yêu cầu.</p>
         <div class="mt-8">
             <label for="modal-toggle" class="inline-flex items-center justify-center bg-red-700 hover:bg-red-800 text-white font-bold py-3 px-8 rounded-lg transition shadow-lg hover:shadow-xl transform hover:scale-105 cursor-pointer">
                 <i data-lucide="file-pen-line" class="w-5 h-5 mr-3"></i>
@@ -323,6 +323,7 @@
 
 </body>
 </html>
+
 
 
 
