--- a/index.html
+++ b/index.html
@@ -59,7 +59,7 @@
     </header>
 
     <!-- MAIN CONTENT: Tông màu đỏ-vàng-trắng -->
-    <main class="py-16 sm:py-20">
+    <main class="pb-16 sm:pb-20">
         <div class="max-w-4xl mx-auto px-4 space-y-16">
 
             <!-- PHẦN 1: GỬI YÊU CẦU HỖ TRỢ -->
@@ -323,6 +323,7 @@
 
 </body>
 </html>
+
 
 
 
